Fix button spacing

--- a/src/AppBundle/Resources/assets/scss/components/_button-bar.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_button-bar.scss
@@ -59,3 +59,18 @@ nav#bottom-button-bar {
 #bottom-overview-button {
     margin-top: 30px;
 }
+
+.button-link {
+    margin-left: 15px;
+    top: 1px;
+    position: relative;
+}
+
+.button-warning {
+    margin-left: 60px;
+}
+
+.right-link {
+    margin-right: 297px;
+    float: right;
+}
